# kidney-meshgen

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  high_res.yaml
docs/: README.md
examples/demo_case/: camera_paths.json  centerline_graph.json  face_labels.csv  labels.json  lumen_inner.glb  lumen_outer.glb  resolved_config.yaml  runtime_scene.json  scene_inside_with_stones.glb  scene_manifest.json  vertex_labels.csv
examples/demo_case/collision/: lumen_sdf_grid.json  lumen_sdf_grid.npz
examples/demo_case/coverage/: coverage_points.csv
examples/demo_case/quality/: geometry_quality.json
examples/demo_case/stones/: stones.glb
examples/demo_case/unity/: KidneyMeshgenManifest.cs  KidneyMeshgenSceneLoader.cs  kidney_meshgen_unity_scene.json
examples/demo_case/waypoints/: navigation_waypoints.csv  navigation_waypoints.json
kidney_meshgen/: __init__.py  anatomy.py  blenderproc_entry.py  blenderproc_render.py  cli.py  config.py  dataset.py  exporters.py  generator.py  graph.py  mesh.py  preview.py  quality.py  render_path.py  sdf.py  sim_export.py  stones.py
tests/: test_blenderproc_render_path.py  test_generation.py
unity/: KidneyMeshgenManifest.cs
