[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kidney-meshgen"
version = "0.6.0"
description = "Procedural renal collecting-system mesh generator for real-time ureteroscopy simulation."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Generated prototype for ureteroscopy AI simulation"}
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.8",
  "scikit-image>=0.19",
  "trimesh>=3.20",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
preview = ["matplotlib>=3.6"]

[dependency-groups]
dev = [
  "pytest>=7.0",
  "ruff>=0.8.0"
]

[project.scripts]
kidney-meshgen = "kidney_meshgen.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kidney_meshgen*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]
